# Laziest-import

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IDLE_NOTES.md  LICENSE  MIGRATION_GUIDE.md  PKG-INFO  PLAN.md  README.md  README_CN.md  SECURITY.md  demo.py  demo_3d_graphics.py  pyproject.toml  test_output.txt
.github/workflows/: build-publish.yml  code-quality.yml  sync-aliases.yml  validate-aliases.yml
.opencode/plans/: fix-stale-alias-detection.md
examples/: terminal_demo.py
laziest_import/: __init__.py  __init__.pyi  __main__.py  _alias.py  _analysis.py  _api.py  _async_ops.py  _cache.py  _config.py  _deprecated.py  _fuzzy.py  _help.py  _hooks.py  _install.py  _introspect.py  _jupyter.py  _lazy_index.py  _lazy_registry.py  _proxy.py  _public_api.py  _rcconfig.py  _state.py  _state_setters.py  _symbol.py  _which.py  aliases.json  version.json
laziest_import/_analysis/: __init__.py  _benchmark.py  _conflict.py  _dependency.py  _environment.py  _preanalyze.py  _preferences.py  _profiler.py
laziest_import/_api/: __init__.py  _alias.py  _analyze.py  _async.py  _background.py  _cache.py  _config.py  _hooks.py  _install.py  _module.py  _rcconfig.py  _symbol.py  _version.py
laziest_import/_cache/: __init__.py  _api.py  _background.py  _dir.py  _file_cache.py  _incremental.py  _symbol_index.py  _version.py
laziest_import/_proxy/: __init__.py  _factory.py  _module.py  _proxy.py  _submodule.py  _symbol.py
laziest_import/_symbol/: __init__.py  _api.py  _incremental.py  _index.py  _scan.py  _search.py  _shard.py
laziest_import/aliases/: A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json  L.json  M.json  N.json  O.json  P.json  Q.json  R.json  S.json  T.json  U.json  V.json  W.json  X.json  Y.json  Z.json  _.json
laziest_import/mappings/: abbreviations.json  misspellings.json  package_rename.json  priorities.json  submodules.json  symbol_misspellings.json
scripts/: sync_aliases.py  validate_aliases.py
tests/: _debug_deep.py  _final_test.py  conftest.py  test_alias.py  test_analysis.py  test_async_ops.py  test_basic.py  test_benchmark.py  test_cache.py  test_comprehensive_usage.py  test_config.py  test_dependency_tree.py  test_edge_cases.py  test_features.py  test_fuzzy.py  test_help.py  test_install.py  test_integration.py  test_introspect.py  test_jupyter.py  test_laziest_import.py  test_new_features.py  test_oop_api.py  test_performance.py  test_phase2_init_slim.py  test_proxy.py  test_public_api.py  test_rcconfig.py  test_shorthand_aliases.py  test_stress.py  test_symbol.py  test_which.py
