[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laziest-import"
version = "0.0.2"
description = "Automatic lazy import library - use common libraries without explicit import statements"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chidc", email = "ChidcGithub@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["import", "lazy", "auto-import", "convenience", "development"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/ChidcGithub/Laziest-import"
Repository = "https://github.com/ChidcGithub/Laziest-import.git"
Issues = "https://github.com/ChidcGithub/Laziest-import/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["laziest_import*"]

[tool.setuptools.package-data]
laziest_import = ["py.typed", "aliases.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
