[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laziest-import"
dynamic = ["version"]
description = "Automatic lazy import library - use common libraries without explicit import statements"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chidc", email = "ChidcGithub@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["import", "lazy", "auto-import", "convenience", "development"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
laziest-import = "laziest_import.__main__:main"

[project.urls]
Homepage = "https://github.com/ChidcGithub/Laziest-import"
Repository = "https://github.com/ChidcGithub/Laziest-import.git"
Issues = "https://github.com/ChidcGithub/Laziest-import/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["laziest_import*"]

[tool.setuptools.package-data]
laziest_import = ["py.typed", "version.json", "aliases/*.json", "mappings/*.json"]

[tool.setuptools.dynamic]
version = {attr = "laziest_import._config.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "SIM", "PL", "RUF"]
ignore = [
    "E501",
    "E731",
    "SIM101",
    "PLR0913",
    "S101",
    # Intentional for a lazy-import library
    "PLC0415",  # import at function level — this IS a lazy import library
    "PLC0414",  # import alias doesn't rename (e.g. `import os as os`) — intentional
    "E402",     # module-level import not at top — intentional lazy loading
    "PLW0602",  # global used but not assigned — intentional in config
    "PLW0603",  # global statement — intentional in config
    "S102",     # exec detected — intentional in tests for `from laziest_import import *`
    "UP035",    # deprecated typing imports — still works, cosmetic only
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = false
